More tracing and transaction processing bugfixing
