# src/main/kotlin/com/beeftechlabs/model/transaction/TransactionsResponse.kt
@@ -4,7 +4,7 @@ import kotlinx.serialization.Serializable
 
 @Serializable
 data class TransactionsResponse(
-    val transactions: List<Transaction>,
     val hasMore: Boolean,
-    val lastTimestamp: Long
+    val lastTimestamp: Long,
+    val transactions: List<Transaction>
 )
